--- a/Fronted/html/default.conf
+++ b/Fronted/html/default.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     listen [::]:80;
-    server_name web.lingoburguer.linkpc.net;
+    server_name lingoburguer.retocsv.es;
 
     root /usr/share/nginx/html;
     index index.html index.html;
@@ -24,7 +24,7 @@ server {
 
     # Proxy para el backend Java en /api
     location /PruebaDBConsola/ {
-        proxy_pass http://web.lingoburguer.linkpc.net:8080/;
+        proxy_pass http://lingoburguer.retocsv.es:8080/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
